# ggrpc

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  cmake.sh  install_deps.sh  install_tools.sh
example/helloworld/: CMakeLists.txt  client.cpp  helloworld.proto  server.cpp
include/ggrpc/: alarm.h  client.h  ggrpc.h  server.h
include/ggrpc/impl/: alarm.h  handler.h  util.h
include/ggrpc/impl/client/: client_manager.h  client_reader.h  client_reader_writer.h  client_response_reader.h  client_writer.h
include/ggrpc/impl/server/: server.h  server_reader.h  server_reader_writer.h  server_response_writer.h  server_writer.h
proto/: ggrpc.proto
src/: client.h  handler.h  server.h
test/: ggrpc_test.cpp
